# eda-titanic-kaggle

./: .gitignore  README.md  Untitled.ipynb  eda-titanic-kagle.ipynb  eda_titanic_kaggle.py  main.py  pyproject.toml  requirements.txt  titanic_clean.csv  titanic_encoded.csv
